*SVN*

* Fixed constant warning when fetching the same object multiple times [DHH]

* Added that saves which get a body response (and not just a 201) will use that response to update themselves [DHH]

* Disregard namespaces from the default element name, so Highrise::Person will just try to fetch from "/people", not "/highrise/people" [DHH]

* Allow array and hash query parameters.  #7756 [Greg Spurrier]

* Loading a resource preserves its prefix_options.  #7353 [Ryan Daigle]

* Carry over the convenience of #create from ActiveRecord.  Closes #7340.  [Ryan Daigle]

* Increase ActiveResource::Base test coverage.  Closes #7173, #7174 [Rich Collins]

* Interpret 422 Unprocessable Entity as ResourceInvalid.  #7097 [dkubb]

* Mega documentation patches. #7025, #7069 [rwdaigle]

* Base.exists?(id, options) and Base#exists? check whether the resource is found.  #6970 [rwdaigle]

* Query string support.  [untext, Jeremy Kemper]
    # GET /forums/1/topics.xml?sort=created_at
    Topic.find(:all, :forum_id => 1, :sort => 'created_at')

* Base#==, eql?, and hash methods. == returns true if its argument is identical to self or if it's an instance of the same class, is not new?, and has the same id. eql? is an alias for ==. hash delegates to id.  [Jeremy Kemper]

* Allow subclassed resources to share the site info [Rick, Jeremy Kemper]

    class BeastResource < ActiveResource::Base
      self.site = 'http://beast.caboo.se'
    end

    class Forum < BeastResource
      # taken from BeastResource
      # self.site = 'http://beast.caboo.se'
    end

    class Topic < BeastResource
      self.site += '/forums/:forum_id'
    end

* Fix issues with ActiveResource collection handling.  Closes #6291. [bmilekic]

* Use attr_accessor_with_default to dry up attribute initialization. References #6538. [Stuart Halloway]

* Add basic logging support for logging outgoing requests. [Jamis Buck]

* Add Base.delete for deleting resources without having to instantiate them first. [Jamis Buck]
